Fix Our apporach on mobile view

--- a/components/approach/approach.module.scss
+++ b/components/approach/approach.module.scss
@@ -11,17 +11,3 @@
   grid-auto-flow: dense;
   grid-gap: 10px;
 }
-
-@media (max-width: $md-screen) {
-  .container {
-    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
-    grid-template-rows: minmax(auto, auto);
-  }
-  .box {
-    grid-column: unset !important;
-    grid-row: unset !important;
-    background-image: none !important;
-    background-color: #feca1f;
-    .box-text { display: block; }
-  }
-}
